<resources>
    <string name="app_name">AppLista</string>
    <string name="txt_Titulo">Aplicativo Lista VIP Curso Android</string>
    <string name="txt_hint_telefone_contato">Telefone de Contato</string>
    <string name="txt_hint_nome_do_curso_desejado">Nome do Curso Desejado</string>
    <string name="txt_hint_sobrenome">Sobrenome</string>
    <string name="txt_hint_primeiro_nome">Primeiro Nome</string>
    <string name="txt_botao_limpar">LIMPAR</string>
    <string name="txt_botao_salvar">SALVAR</string>
    <string name="txt_botao_finalizar">FINALIZAR</string>
</resources>